--- a/02-linking-within-a-page/constitution.html
+++ b/02-linking-within-a-page/constitution.html
@@ -30,7 +30,7 @@
       <h2>Amendments</h2>
 
       <article>
-        <h3>Amendment I</h3>
+        <h3>Amendment 1</h3>
 
         <p>Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government for a redress of grievances.</p>
       </article>
