--- a/01-external-links/my-favorite-sites.html
+++ b/01-external-links/my-favorite-sites.html
@@ -9,7 +9,7 @@
     <h1>My Favorite Web Sites</h1>
 
     <ul>
-      <li></li>
+      <li><a href="https://miami.edu">University of Miami</a></li>
       <li></li>
       <li></li>
       <li></li>
@@ -17,8 +17,8 @@
 
     <footer>
       <address>
-        <p>Email: ibis@miami.edu</p>
-        <p>Phone: 305-284-2211</p> 
+        <p><a href="mailto:ibis@miami.edu">Email Sebastian!</a></p>
+        <p><a href="tel:305-284-2211">Call us!</a></p>
       </address>
     </footer>
 
