--- a/02-linking-within-a-page/constitution.html
+++ b/02-linking-within-a-page/constitution.html
@@ -13,7 +13,7 @@
 
     <nav>
       <ul>
-        <li>Amendment I</li>
+        <li><a href="#amend-1">Amendment I</a></li>
         <li>Amendment II</li>
         <li>Amendment III</li>
         <li>Amendment IV</li>
@@ -29,7 +29,7 @@
     <main>
       <h2>Amendments</h2>
 
-      <article>
+      <article id="amend-1">
         <h3>Amendment 1</h3>
 
         <p>Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government for a redress of grievances.</p>
