--- a/03-linking-within-a-site/index.html
+++ b/03-linking-within-a-site/index.html
@@ -16,7 +16,7 @@
         <h3>Main Street U.S.A.</h3>
 
         <ul>
-          <li><a href="">Walt Disney World Railroad</a></li>
+          <li><a href="main-street-usa/wdw-railroad.html">Walt Disney World Railroad</a></li>
         </ul>
       </section>
 
@@ -24,8 +24,8 @@
         <h3>Adventureland</h3>
 
         <ul>
-          <li><a href="">Jungle Cruise</a></li>
-          <li><a href="">Pirates of the Caribbean</a></li>
+          <li><a href="adventureland/jungle-cruise.html">Jungle Cruise</a></li>
+          <li><a href="adventureland/pirates-of-the-caribbean.html">Pirates of the Caribbean</a></li>
         </ul>
       </section>
 
